@@ -1,7 +1,9 @@
 Changes since version 1.6-6
 
-  * ercomp: re-write to be a more general framework.
+  * ercomp: re-written to be a more general framework.
   * plm: new argument weights added.
+  * plm: fix backward compatibility for the (deprecated!) argument 'instruments'
+         to estimate IV models (but rather use 2-part formulae for IV models).
   * pbsytest:
       * test = "j": [joint test by Baltagi/Li(1991)]:
         fixed degrees of freedom (now df = 2 instead of df = 1).
